<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainNavId"
        android:icon="@drawable/ic_menu_main"
        android:title="@string/menu_title_main" />
    <item
        android:id="@+id/companiesNavId"
        android:icon="@drawable/ic_menu_companies"
        android:title="@string/menu_title_companies" />
    <item
        android:id="@+id/servicesNavId"
        android:icon="@drawable/ic_menu_services"
        android:title="@string/menu_title_services" />
    <item
        android:id="@+id/notificationsNavId"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/menu_title_notifications" />
    <item
        android:id="@+id/myAccountNavId"
        android:icon="@drawable/ic_menu_account"
        android:title="@string/menu_title_my_account" />
</menu>