<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="?android:colorBackground">

        <com.ailetv.mobile.widget.TextInputLayout
            android:id="@+id/phoneTil"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="64dp"
            android:hint="@string/phone"
            app:expandedHintEnabled="false"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEdt"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:maxLines="1"
                android:singleLine="true" />
        </com.ailetv.mobile.widget.TextInputLayout>

        <TextView
            android:id="@+id/contactUsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/contact_us"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/contactUsBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/contactUsBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contactUsBtn"
            style="?materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="920"
            android:textSize="30sp"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_call"
            app:iconPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneTil"
            app:strokeWidth="0dp"
            tools:ignore="HardcodedText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/liveTvBtn"
            style="@style/MaterialButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="36dp"
            android:paddingRight="62dp"
            android:text="@string/live_tv"
            android:textColor="@color/white"
            app:icon="@drawable/ic_live_tv"
            app:iconTint="@color/white"
            app:backgroundTint="#F6B931"
            app:layout_constraintTop_toBottomOf="@+id/contactUsBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/whatsappBtn"
            style="@style/MaterialButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="36dp"
            android:paddingRight="62dp"
            android:text="@string/whatsapp"
            android:textColor="@color/white"
            app:backgroundTint="@color/whatsapp"
            app:icon="@drawable/ic_whatsapp"
            app:layout_constraintTop_toBottomOf="@+id/liveTvBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookBtn"
            style="@style/MaterialButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="36dp"
            android:paddingRight="62dp"
            android:text="@string/facebook"
            android:textColor="@color/white"
            app:backgroundTint="@color/facebook"
            app:icon="@drawable/ic_facebook"
            app:layout_constraintTop_toBottomOf="@+id/whatsappBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/instagramBtn"
            style="@style/MaterialButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="36dp"
            android:paddingRight="62dp"
            android:text="@string/instagram"
            android:textColor="@color/white"
            app:backgroundTint="@color/instagram"
            app:icon="@drawable/ic_instagram"
            app:layout_constraintTop_toBottomOf="@+id/facebookBtn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutBtn"
            android:layout_width="146dp"
            android:layout_height="36dp"
            android:layout_marginVertical="20dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp"
            app:backgroundTint="@color/gray"
            app:icon="@drawable/ic_logout"
            app:iconTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instagramBtn"
            app:layout_constraintVertical_bias="1"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceLogoutButton"
            app:strokeWidth="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>