<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ailetv.mobile.utils.extensions.StringExtKt" />

        <import type="com.ailetv.mobile.utils.ValidationKt" />

        <import type="com.ailetv.mobile.data.enums.UiState" />

        <variable
            name="viewModel"
            type="com.ailetv.mobile.ui.dashboard.main.payment.PaymentAmountVM" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layoutDescription="@xml/scene_payment_amount"
        tools:background="@drawable/window_background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextColor="?colorOnPrimary" />

        <ImageView
            android:id="@+id/logoImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_logo_tv"
            app:layout_constraintBottom_toTopOf="@+id/titleTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:maxLines="1"
            android:text="@string/tv_contract"
            android:textColor="?colorOnPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/roundView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImg" />

        <View
            android:id="@+id/roundView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/service_detail_round_view_margin_top"
            android:background="?android:colorBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            bind:radiusTop="@{20}" />


        <com.ailetv.mobile.widget.TextInputLayout
            android:id="@+id/amountTil"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:hint="@string/payment_amount"
            android:layout_marginTop="44dp"
            app:expandedHintEnabled="false"
            app:layout_constraintTop_toTopOf="@+id/roundView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountEdt"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                bind:paymentMaxAmount="@{10000}"
                android:text="@={viewModel.amount}" />
        </com.ailetv.mobile.widget.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/payBtn"
            style="@style/MaterialButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/pay"
            bind:enabled="@{ValidationKt.isValidPaymentAmount(StringExtKt.toDoubleOrZero(viewModel.amount), 0, 10000)}"
            app:layout_constraintBottom_toBottomOf="parent"
            bind:onSingleClick="@{()-> viewModel.paymentCreate()}" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>